# maritime-sbom-action

./: .gitignore  Dockerfile  README.md  RELEASE.md  action.yml  generate-sbom
.github/templates/: sbom-generation.yml.tpl
.github/workflows/: publish-sbom-workflow.yml  test.yml
generate/: Dockerfile  action.yml  generate-sbom
generate/scripts/: sbom-generator.sh  to-plain-sbom.jq
generate/tests/: jq-tests.sh  run-tests.sh
generate/tests/fixtures/cargo-project/: Cargo.toml
generate/tests/fixtures/maven-project/: pom.xml
generate/tests/fixtures/npm-project/: package-lock.json  package.json
generate/tests/fixtures/npm-project/.github/workflows/: ci.yml
generate/tests/fixtures/recurse-project/: package-lock.json  package.json
generate/tests/fixtures/recurse-project/nested/: package-lock.json  package.json
scripts/: sbom-generator.sh
tests/: run-tests.sh
tests/fixtures/npm-project/: package.json
upload/: action.yml  upload.sh
upload/tests/: mock-api-server.py  run-tests.sh
